style - Fixed wrong font size and padding in chrome

--- a/content/css/index.css
+++ b/content/css/index.css
@@ -69,7 +69,7 @@ p {
     font-family: Roboto;
     font-weight: 400;
 
-    font-size: 1.1em;
+    font-size: 1em;
 
     color: white;
 }
@@ -119,7 +119,7 @@ body > div {
     background: #00A3FF40;
     box-shadow: 0px -4px 4px #00000040;
 
-    padding: 2em;
+    padding: 0 1em;
 
     position: absolute;
     bottom: 0;
@@ -238,7 +238,7 @@ div[id$=Div] {
 
     width: 100%;
 
-    padding: 2em 0;
+    padding: 1em 0;
 
     box-sizing: border-box;
 
